<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
   Copyright 2021 eve autonomy inc. All Rights Reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<package format="3">
  <name>v2i_interface</name>
  <version>1.0.0</version>
  <description>The v2i interface package</description>

  <maintainer email="yuma.nihei@eveautonomy.com">Yuma Nihei</maintainer>

  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>tier4_v2x_msgs</depend>
  <depend>autoware_state_machine_msgs</depend>
  <depend>v2i_interface_params</depend>

  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
